# throughster

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: async_requests.py  benchmark_throughput.py  hf_datasets_map.py  load_balancing.py  nlg_evaluation.py  structured_decoding.py  vllm_cot_structured_alignment.py
examples/counter/: __init__.py  counter.py  server.py
tests/: test_hf_datasets.py  test_interface.py  utils.py
tests/azure/: test_openai_interface.py
tests/azure/responses/2024-02-01/: chat_completion.json  chat_completion_content_filter.json  chat_tools_completion.json  chat_tools_completion_fail.json
tests/vllm/: test_vllm_interface.py
tests/vllm/responses/v0.4.3/: chat_completion.json  chat_completion_max_tokens.json  chat_completion_stop_reason.json  chat_guided_generation_failed.json  chat_guided_generation_success.json
throughster/: __init__.py  base.py  factory.py  hf_datasets.py
throughster/azure/: client.py  models.py  utils.py
throughster/core/: config.py  constants.py  decorators.py  errors.py  models.py  retry.py
throughster/mistral/: client.py  models.py
throughster/vllm/: client.py  models.py  utils.py
