[tool.poetry]
name = "throughster"
version = "0.0.1"
description = "Throughster optimizes and standardizes API interactions with large language models through advanced HTTP connection pooling and HuggingFace .map support for efficient multiprocessing."
authors = ["Andreas Motzfeldt <andreas@motzfeldt.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.27.0"
openai = "^1.37.1"
tenacity = "<=8.5.0"
pydantic = "^2.7.3"
docstring-parser = "^0.16"
fastapi = "^0.111.1"
loguru = "^0.7.2"
numpy = "<2.0.0"
pydantic-settings = "^2.3.2"
aiocache = "^0.12.2"
aiofilecache = "^0.0.1"

[tool.poetry.group.examples]
optional = false

[tool.poetry.group.examples.dependencies]
datasets = "^2.19.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
ipython = "8.29.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
typeguard = "^4.2.1"
requests = "^2.31.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
